Transition to eyes-images-java3
Transition to eyes-images-java3

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.applitools</groupId>
-            <artifactId>eyes-images-java</artifactId>
+            <artifactId>eyes-images-java3</artifactId>
             <version>RELEASE</version>
         </dependency>
         <dependency>
