--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,12 @@
             <artifactId>opencsv</artifactId>
             <version>RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
     </dependencies>
 </project>
