--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
         <dependency>
             <groupId>com.applitools</groupId>
             <artifactId>eyes-images-java3</artifactId>
-            <version>RELEASE</version>
+            <version>3.141.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>[1.8.12,)</version>
+            <version>RELEASE</version>
         </dependency>
 
         <dependency>
